<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/_48sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_sentiment_very_satisfied_black_24dp"
        android:tint="@android:color/white"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMessage"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toTopOf="@+id/tvMessage" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/username_placeholder" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_custom_incoming_message"
        android:paddingLeft="18dp"
        android:paddingTop="10dp"
        android:paddingRight="18dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        tools:text="@string/text_placeholder" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/gray_dark_transparent"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"
        tools:text="@string/date_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>