<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar"
        style="@style/SpinKitView.Large.Wave"
        app:SpinKit_Color="#52BA9B"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="@dimen/_35sdp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_chat"
                android:tint="@color/green_300" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/blue_grey_500"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/blue_grey_300"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/blue_grey_500"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/blue_grey_300"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_10sdp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/background_rounded"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/blue_grey_900" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_5sdp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>